--- a/NetCafeWeb/NetCafeWeb.csproj
+++ b/NetCafeWeb/NetCafeWeb.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NetCafeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -195,6 +196,10 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\NetCafeRepository.cs" />
+    <Compile Include="Models\OrderRepository.cs" />
+    <Compile Include="Models\PCRepository.cs" />
+    <Compile Include="Models\RoleRepository.cs" />
+    <Compile Include="Models\UserRepository.cs" />
     <Compile Include="NetCafe.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -209,9 +214,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
-    <Compile Include="URL.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -289,6 +291,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\NetCafe\Index.cshtml" />
+    <Content Include="Views\NetCafe\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
