--- a/NetCafeWeb/NetCafeWeb.csproj
+++ b/NetCafeWeb/NetCafeWeb.csproj
@@ -221,7 +221,7 @@
     <Compile Include="Service\IOrderInterface.cs" />
     <Compile Include="Service\OrderService.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="URL.cs">
+    <Compile Include="sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
