--- a/NetCafeWeb/Web.config
+++ b/NetCafeWeb/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=QUYHTSE61204\SQLEXPRESS;Initial Catalog=NetCafe;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=QUYHTSE61204\SQLEXPRESS;Initial Catalog=NetCafe;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
 
-  
-  <add name="NetCafeEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=QUANNPMSE61326\SQLEXPRESS;initial catalog=NetCafe;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="NetCafeEntities" connectionString="Data Source=localhost;Initial Catalog=NetCafe;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
+  <add name="NetCafeEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=QUYHTSE61204\SQLEXPRESS;initial catalog=NetCafe;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
     <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
