--- a/NetCafeWeb/NetCafeWeb.csproj
+++ b/NetCafeWeb/NetCafeWeb.csproj
@@ -218,8 +218,11 @@
     <Compile Include="Role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Service\INetCafeService.cs" />
     <Compile Include="Service\IOrderInterface.cs" />
+    <Compile Include="Service\NetCafeService.cs" />
     <Compile Include="Service\OrderService.cs" />
+    <Compile Include="SLIM_CONFIG.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="URL.cs">
       <DependentUpon>Model1.tt</DependentUpon>
